Consolidate common 'enable preview features' config to the Gradle convention plugin