@@ -10,6 +10,21 @@ java {
     }
 }
 
+/**
+ * Configure the compilation and test tasks to enable Java language "Preview Features". Specifically, we want the "JEP 406: Pattern Matching for switch"
+ * preview feature. https://openjdk.java.net/jeps/406
+ */
+tasks {
+    withType(JavaCompile::class.java) {
+        options.compilerArgs.addAll(arrayOf("--enable-preview"))
+    }
+
+    withType(Test::class.java) {
+        jvmArgs = listOf("--enable-preview")
+        useJUnitPlatform()
+    }
+}
+
 repositories {
     mavenCentral()
 }
